fix: add center-row custom style rule to center align row content

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,6 +42,10 @@ a {
     padding: 0.5rem;
 }
 
+.center-row {
+    justify-content: center;
+}
+
 /* **** Nav Elements **** */
 
 #nav-logo {
